# ipws

./: .clang-format  .gitignore  CMakeLists.txt  E_Poly.c  GNUmakefile  Global.h  HEInput.txt  LG.c  LG.h  Makefile  Mori.h  MoriCone.c  Nefpart.c  README.md  README.rst  Rat.c  Rat.h  SingularInput.c  Subadd.c  Subdb.c  Subpoly.c  Vertex.c  WsIp.c  WsIp.h  WsIp.java  class.c  config.h-default  config.h.in  cws.c  cws.cpp  cws0.c  cws0.cpp  cws1.cpp  file.cpp  file.h  global.h  global2.h  history.cpp  history.h  hyperplane.h  (+26 more)
deploy/: Makefile  combine-candidates  combine-candidates.yml  copy-pairs.yml  find-candidates  find-candidates.yml  find-ws.yml  inventory-tf  inventory-tu  run-ipws
deploy/group_vars/: all
deploy/roles/combine-candidates/tasks/: main.yml
deploy/roles/copy-pairs/tasks/: main.yml
deploy/roles/deploy/defaults/: main.yml
deploy/roles/deploy/tasks/: main.yml
deploy/roles/find-candidates/tasks/: main.yml
deploy/roles/find-ws/tasks/: main.yml
palp/: Global.h  Rat.c  Rat.h
src/: add-half.cpp  buffered_reader.cpp  buffered_reader.h  buffered_writer.cpp  buffered_writer.h  history.cpp  history.h  info.cpp  io.cpp  io.h  ip_check.c  ipws.cpp  palp_glue.cpp  point.cpp  point.h  polytope.cpp  polytope.h  read_write.cpp  read_write.h  sample.cpp  stl_utils.h  stopwatch.h  vector.h  vector_mixin.h  weight_system.cpp  weight_system.h  weight_system_builder.cpp  weight_system_builder.h  weight_system_pair.cpp  weight_system_pair.h
src/include/tclap/: Makefile  Makefile.in
src/palp/: Coord.c  Global.h  Polynf.c  Vertex.c
